useFile and Delete

--- a/app/components/Header/Img.css
+++ b/app/components/Header/Img.css
@@ -1,7 +1,6 @@
-#header-img
-{
+#header-img {
     border-style: none;
-    width: 531px !important;
-    height: 130px !important;
-    margin-left: 28%;
+    width: 624px !important;
+    height: 163px !important;
+    margin-left: 24%;
 }
