--- a/app/components/Folder/folder.css
+++ b/app/components/Folder/folder.css
@@ -19,7 +19,7 @@
     width: max-content;
     padding-top: 8px;
     padding-bottom: 0;
-    margin-left: 10% !important;
+    padding-right: 40px !important;
 }
 .MuiIconButton-root{
     padding: 0 !important;
@@ -37,5 +37,6 @@
 }
 
 ul{
-    left: 0;
+    position: relative;
+    left: 20px;
 }
